Novara-capstone-project/src/App.css
/* GLOBAL RESET */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* SMOOTH SCROLL */

html {
  scroll-behavior: smooth;
}

/* BODY + ROOT */

body,
#root {
  font-family: Arial, sans-serif;

  background-color: #041b5f;

  width: 100%;

  overflow-x: hidden;
}

/* LINKS */

a {
  text-decoration: none;
}

/* BUTTONS */

button {
  cursor: pointer;

  border: none;
}

